Stop horizontal scroll on landing page on mobiles

--- a/www-src/app/styles/layout.less
+++ b/www-src/app/styles/layout.less
@@ -10,6 +10,13 @@ body > .container {
 	padding-top: 60px;
 }
 
+#landingpage {
+	.row {
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
+
 /* Start over-riding nv.d3.css */
 svg {
 	height: initial;
